--- a/03-html/00-basic.html
+++ b/03-html/00-basic.html
@@ -209,18 +209,114 @@
       <ul>
         <li>
           탑
+          <!-- depth2 -->
+          <ul>
+            <li>
+              블라우스
+              <ul>
+                <li>depth3</li>
+                <li>depth3</li>
+                <li>depth3</li>
+              </ul>
+            </li>
+            <li>티</li>
+            <li>셔츠</li>
+            <li>니트</li>
+          </ul>
         </li>
         <li>
           아우터
+          <!-- depth2 -->
+          <ul>
+            <li>자켓</li>
+            <li>코트</li>
+            <li>
+              가디건
+              <ul>
+                <li>depth3</li>
+                <li>depth3</li>
+                <li>depth3</li>
+              </ul>
+            </li>
+            <li>머플러</li>
+          </ul>
         </li>
         <li>
           팬츠
+          <!-- depth2 -->
+          <ul>
+            <li>청바지</li>
+            <li>짧은바지</li>
+            <li>긴바지</li>
+            <li>레깅스</li>
+          </ul>
         </li>
         <li>
           악세사리
+          <!-- depth2 -->
+          <ul>
+            <li>귀고리</li>
+            <li>목걸이</li>
+            <li>반지</li>
+            <li>팔찌</li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
         </li>
       </ul>
     </section>
+
+    
 
     <section id="nav">
       <h2>Nav</h2>
