--- a/03-html/00-basic.html
+++ b/03-html/00-basic.html
@@ -269,6 +269,39 @@
           <ul>
             <li>
               <a href="#">depth2</a>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
               <ul>
                 <li>
                   <a href="#">depth3</a>
@@ -280,43 +313,73 @@
             </li>
           </ul>
         </li>
+      </ul>
+    </section>
+    <head>
+      <h2>dl, dt, dd태그</h2>
+    </head>
+    <section>
+      <dl>
+        <dt>이름</dt>
+        <dd>설명</dd>
+        <dt>이름</dt>
+        <dd>설명</dd>
+      </dl>
+
+      <dl>
+        <dt>이름</dt>
+        <dd>설명</dd>
+      </dl>
+      <dl>
+        <dt>이름</dt>
+        <dd>설명</dd>
+      </dl>
+    </section>
+
+    <header>
+      <h2>블록 & 인라인</h2>
+    </header>
+    <section>
+      <ul>
         <li>
-          <a href="#">depth1</a>
-          <ul>
-            <li>
-              <a href="#">depth2</a>
-            </li>
-            <li>
-              <a href="#">depth2</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">depth1</a>
-          <ul>
-            <li>
-              <a href="#">depth2</a>
-            </li>
-            <li>
-              <a href="#">depth2</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">depth1</a>
-          <ul>
-            <li>
-              <a href="#">depth2</a>
-            </li>
-            <li>
-              <a href="#">depth2</a>
-            </li>
-          </ul>
+          block
+          <div style="border: 1px solid red;">div</div>
+          <div style="border: 1px solid red;">div2</div>
+          <section style="border: 1px solid red;">section</section>
+          <header style="border: 1px solid red;">header</header>
         </li>
       </ul>
     </section>
 
-    
+    <header>
+      <h2>class</h2>
+    </header>
+    <section>
+      <div class="wrap">
+        <div class="sec sec1">1</div>
+        <div class="sec sec2">2</div>
+        <div class="sec sec3">3</div>
+      </div>
+      <style>
+        .wrap {
+          border: 5px solid #ff5739f1;
+          background: #ffaa83;
+        }
+        .sec {
+          border: 4px solid rgb(25, 0, 255);
+        }
+        .sec1 { 
+          background: greenyellow;
+        }
+        .sec2 { 
+          background: green;
+        }
+        .sec3 {
+          background: darkslategray;
+        }
+      </style>
+
+    </section>
 
     <section id="nav">
       <h2>Nav</h2>
