--- a/05-craftsmanWebDesign/01-just쇼핑몰/index.html
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/index.html
@@ -1,110 +1,164 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just쇼핑몰</title>
-</head>
-<body>
-  <div class="wrap">
-    <header class="header">
-      <!-- 로고 -->
-      <h1 class="logo">
-        <a href="#">Just쇼핑몰</a>
-      </h1>
-      <!-- 네비게이션 -->
-      <h2>메인메뉴</h2>
-      <nav class="gnb">
-        <ul class="depth1">
-          <li>
-            <a href="#">탑</a>
-            <ul class="depth2">
-              <li><a href="#">블라우스</a></li>
-              <li><a href="#">티</a></li>
-              <li><a href="#">셔츠</a></li>
-              <li><a href="#">니트</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">아우터</a>
-            <ul class="depth2">
-              <li><a href="#">자켓</a></li>
-              <li><a href="#">코트</a></li>
-              <li><a href="#">가디건</a></li>
-              <li><a href="#">머플러</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">팬츠</a>
-            <ul class="depth2">
-              <li><a href="#">청바지</a></li>
-              <li><a href="#">짧은바지</a></li>
-              <li><a href="#">긴바지</a></li>
-              <li><a href="#">레깅스</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">악세서리</a>
-            <ul class="depth2">
-              <li><a href="#">귀고리</a></li>
-              <li><a href="#">목걸이</a></li>
-              <li><a href="#">반지</a></li>
-              <li><a href="#">팔찌</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main">
-      <div class="slide">
-        <div class="slide1"></div>
-        <div class="slide2"></div>
-        <div class="slide3"></div>
-      </div>
-      <div class="contents">
-        <!-- 공지사항&갤러리 -->
-        <div class="tabs">
-          <section class="bbs">
-            <h3>공지사항</h3>
-            <div class="cont">공지사항 내용</div>
-          </section>
-          <section class="gallery">
-            <h3>갤러리</h3>
-            <div class="cont">갤러리 내용</div>
-          </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Just쇼핑몰</title>
+  </head>
+  <body>
+    <div class="wrap">
+      <header class="header">
+        <!-- 로고 -->
+        <h1 class="logo">
+          <a href="#">Just쇼핑몰</a>
+        </h1>
+        <!-- 네비게이션 -->
+        <h2>메인메뉴</h2>
+        <nav class="gnb">
+          <ul class="depth1">
+            <li>
+              <a href="#">탑</a>
+              <ul class="depth2">
+                <li><a href="#">블라우스</a></li>
+                <li><a href="#">티</a></li>
+                <li><a href="#">셔츠</a></li>
+                <li><a href="#">니트</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">아우터</a>
+              <ul class="depth2">
+                <li><a href="#">자켓</a></li>
+                <li><a href="#">코트</a></li>
+                <li><a href="#">가디건</a></li>
+                <li><a href="#">머플러</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">팬츠</a>
+              <ul class="depth2">
+                <li><a href="#">청바지</a></li>
+                <li><a href="#">짧은바지</a></li>
+                <li><a href="#">긴바지</a></li>
+                <li><a href="#">레깅스</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">악세서리</a>
+              <ul class="depth2">
+                <li><a href="#">귀고리</a></li>
+                <li><a href="#">목걸이</a></li>
+                <li><a href="#">반지</a></li>
+                <li><a href="#">팔찌</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main">
+        <div class="slide">
+          <div class="slide1"></div>
+          <div class="slide2"></div>
+          <div class="slide3"></div>
         </div>
-        <!-- 배너 -->
-        <div class="bnr">
-          <a href="#">
-            <img src="#" alt="#">
-          </a>
+        <div class="contents">
+          <!-- 공지사항&갤러리 -->
+          <div class="tabs">
+            <section class="bbs">
+              <h3>공지사항</h3>
+              <div class="cont">
+                <!-- 텍스트 리스트 -->
+                <ul class="lst-bbs">
+                  <li>
+                    <a href="#">[안내] 6/6 (현충일) 고객센터 휴무 안내 </a>
+                  </li>
+                  <li>
+                    <a href="#">[안내] 6월 카드사 무이자/부분 무이자 안내 </a>
+                  </li>
+                  <li>
+                    <a href="#">[안내] 개인정보 처리방침 변경 안내 </a>
+                  </li>
+                  <li>
+                    <a href="#">[안내] 5/29일 대체휴일 고객센터 휴무 안내 </a>
+                  </li>
+                  <li>
+                    <a href="#">[안내] 5/5일 (어린이날) 고객센터 휴무 안내 </a>
+                  </li>
+                </ul>
+              </div>
+            </section>
+            <section class="gallery">
+              <h3>갤러리</h3>
+              <div class="cont">
+                <!-- 썸네일 리스트 -->
+                <ul class="lst-gallery">
+                  <li>
+                    <a href="#">
+                      <img src="이미지경로" alt="" />
+                    </a>
+                    <a href="#">
+                      <p>STYLE STORY</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="이미지경로" alt="" />
+                    </a>
+                    <a href="#">
+                      <p>WHAT'S NEW</p>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <img src="이미지경로" alt="" />
+                    </a>
+                    <a href="#">
+                      <p>EXCLUSIVE</p>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </section>
+          </div>
+          <!-- 배너 -->
+          <div class="bnr">
+            <a href="#">
+              <img src="#" alt="#" />
+            </a>
+          </div>
+          <!-- 바로가기 -->
+          <div class="goto">
+            <ul>
+              <li><a href="#">바로가기1</a></li>
+              <li><a href="#">바로가기2</a></li>
+              <li><a href="#">바로가기3</a></li>
+              <li><a href="#">바로가기4</a></li>
+            </ul>
+          </div>
         </div>
-        <!-- 바로가기 -->
-        <div class="goto">
+      </main>
+      <footer class="footer">
+        <div class="logo-foot">
+          <a href="#">로고 풋터용</a>
+        </div>
+        <div class="copyright">copyright</div>
+        <div class="sns">
           <ul>
-            <li><a href="#">바로가기1</a></li>
-            <li><a href="#">바로가기2</a></li>
-            <li><a href="#">바로가기3</a></li>
-            <li><a href="#">바로가기4</a></li>
+            <li><a href="#">facebook</a></li>
+            <li><a href="#">instagram</a></li>
+            <li><a href="#">youtube</a></li>
+            <li><a href="#">blog</a></li>
           </ul>
         </div>
+      </footer>
+    </div>
+    <!-- modal -->
+    <div id="modal" class="dimmed">
+      <div class="modal-box">
+        <h3>모달창 제목</h3>
+        <p>모달창 내용</p>
+        <button>닫기</button>
       </div>
-    </main>
-    <footer class="footer">
-      <div class="logo-foot">
-        <a href="#">로고 풋터용</a>
-      </div>
-      <div class="copyright">카피라이트</div>
-      <div class="sns">
-        <ul>
-          <li><a href="#">facebook</a></li>
-          <li><a href="#">instagram</a></li>
-          <li><a href="#">youtube</a></li>
-          <li><a href="#">blog</a></li>
-        </ul>
-      </div>
-    </footer>
-  </div>
-
-</body>
+    </div>
+  </body>
 </html>
