form, input type, label

--- a/03-html/02-form.html
+++ b/03-html/02-form.html
@@ -59,12 +59,12 @@
       <div>
         <label for="email">이메일</label>
         <input type="email" name="email" id="email" /> @
-        <section>
+        <select>
           <option value="">이메일 선택</option>
           <option value="gmail.com">gmail.com</option>
           <option value="naver.com">naver.com</option>
           <option value="hanmil.net">hanmil.net</option>
-        </section>
+        </select>
       </div>
       <div>
         <label for="birth">생년월일</label>
