--- a/04-css/01-선택자.html
+++ b/04-css/01-선택자.html
@@ -42,6 +42,9 @@
       </ul>
     </div>
     <style>
+      .depth1 > li > a {
+        border: 3px solid #ff0095;
+      }
       .depth1 .lst > a,
       .depth1 .fst > a {
         background: #1efd1ec0;
@@ -50,7 +53,7 @@
         border: 3px solid #fa8423a9;
       }
       .depth2-1 {
-        border: 3px solid #fa4848;
+        border: 3px solid #f57f7f;
       }
       .depth2-1 li {
         background: #f8cdfc;
