--- a/04-css/04-boxmodel.html
+++ b/04-css/04-boxmodel.html
@@ -38,14 +38,14 @@
 
     <h2>세로 사이즈</h2>
     <div class="box2">
-      <div>메롱메롱약오루지</div>
+      <div></div>
     </div>
     <style>
       .box2 {
         background: #b4d7ff;
       }
       .box2 div {
-        height: 100px;
+        height: 100vh;
         background: #ffd9a8;
       }
     </style>
