--- a/05-craftsmanWebDesign/01-just쇼핑몰/index.html
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Just쇼핑몰</title>
+    <link rel="stylesheet" href="./css/comm.css" />
   </head>
   <body>
     <div class="wrap">
       <header class="header">
         <!-- 로고 -->
         <h1 class="logo">
-          <a href="#">Just쇼핑몰</a>
+          <a href="#">
+            <img src="./images/Just 쇼핑몰.jpg" alt="Just쇼핑몰" />
+          </a>
         </h1>
         <!-- 네비게이션 -->
-        <h2>메인메뉴</h2>
         <nav class="gnb">
           <ul class="depth1">
             <li>
