--- a/05-craftsmanWebDesign/01-just쇼핑몰/index.html
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/index.html
@@ -59,9 +59,30 @@
       </header>
       <main class="main">
         <div class="slide">
-          <div class="slide1"></div>
-          <div class="slide2"></div>
-          <div class="slide3"></div>
+          <div class="slide1">
+            <a href="#">
+              <img
+                src="./images/slide 1.jpg"
+                alt="Lamerei 여름 햇살 아래 여유로운 나만의 바캉스 라메레이 ~46% + 최대 3만원 페이백 이벤트"
+              />
+            </a>
+          </div>
+          <div class="slide2">
+            <a href="#">
+              <img
+                src="./images/slide 2.jpg"
+                alt="a.t. corner 엣코너와 함께한 설레는 여름 이야기 10% 쿠폰 + 30% 페이백까지"
+              />
+            </a>
+          </div>
+          <div class="slide3">
+            <a href="#">
+              <img
+                src="./images/slide 3.jpg"
+                alt="depound 싱그럽고 청량한 드파운드만의 컬렉션 최대 50% 할인 + 스타벅스 쿠폰"
+              />
+            </a>
+          </div>
         </div>
         <div class="contents">
           <!-- 공지사항&갤러리 -->
@@ -124,9 +145,14 @@
           </div>
           <!-- 배너 -->
           <div class="bnr">
-            <a href="#">
-              <img src="#" alt="#" />
-            </a>
+            <div class="bnr1">
+              <a href="#">
+                <img
+                  src="./images/bnr 1.jpg"
+                  alt="WELCOME GIFT 처음이니까 더 특별한 혜택 스페셜 20% 쿠폰 + 첫 구매 5천"
+                />
+              </a>
+            </div>
           </div>
           <!-- 바로가기 -->
           <div class="goto">
