--- a/05-craftsmanWebDesign/01-just쇼핑몰/index.html
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/index.html
@@ -85,70 +85,68 @@
           </div>
         </div>
         <div class="contents">
-          <!-- 공지사항&갤러리 -->
-          <div class="tabs">
-            <section class="bbs">
-              <h3>공지사항</h3>
+          <!-- 공지사항 tab -->
+          <div class="tabs-wrap">
+            <div class="tab-item on">
+              <h3 class="tit">공지사항</h3>
               <div class="cont">
-                <!-- 텍스트 리스트 -->
+                <!-- 공지사항 list -->
                 <ul class="lst-bbs">
                   <li>
-                    <a href="#">[안내] 6/6 (현충일) 고객센터 휴무 안내 </a>
+                    <a href="#">[안내] 6/6 (현충일) 고객센터 휴무 안내</a>
                   </li>
                   <li>
-                    <a href="#">[안내] 6월 카드사 무이자/부분 무이자 안내 </a>
+                    <a href="#">[안내] 6월 카드사 무이자/부분 무이자 안내</a>
                   </li>
                   <li>
-                    <a href="#">[안내] 개인정보 처리방침 변경 안내 </a>
-                  </li>
-                  <li>
-                    <a href="#">[안내] 5/29일 대체휴일 고객센터 휴무 안내 </a>
-                  </li>
-                  <li>
-                    <a href="#">[안내] 5/5일 (어린이날) 고객센터 휴무 안내 </a>
+                    <a href="#">[안내] 개인정보 처리방침 변경 안내</a>
                   </li>
                 </ul>
               </div>
-            </section>
-            <section class="gallery">
-              <h3>갤러리</h3>
+            </div>
+            <!-- 갤러리 tab -->
+            <div class="tab-item">
+              <h3 class="tit">갤러리</h3>
               <div class="cont">
                 <!-- 썸네일 리스트 -->
                 <ul class="lst-gallery">
                   <li>
                     <a href="#">
-                      <img src="이미지경로" alt="" />
-                    </a>
-                    <a href="#">
-                      <p>STYLE STORY</p>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="이미지경로" alt="" />
-                    </a>
-                    <a href="#">
-                      <p>WHAT'S NEW</p>
+                      <img
+                        src="./images/gallery 1.jpg"
+                        alt="SOLE's WONDERLAND"
+                      />
+                      <p>SOLE's WONDERLAND</p>
                     </a>
                   </li>
                   <li>
                     <a href="#">
-                      <img src="이미지경로" alt="" />
+                      <img
+                        src="./images/gallery 2.jpg"
+                        alt="EENK GLOBAL CAMPAIGN"
+                      />
+                      <p>EENK GLOBAL CAMPAIGN</p>
                     </a>
+                  </li>
+                  <li>
                     <a href="#">
-                      <p>EXCLUSIVE</p>
+                      <img
+                        src="./images/gallery 3.jpg"
+                        alt="HI SEOUL SHOWROOM"
+                      />
+                      <p>HI SEOUL SHOWROOM</p>
                     </a>
                   </li>
                 </ul>
               </div>
-            </section>
+            </div>
           </div>
           <!-- 배너 -->
           <div class="bnr">
             <div class="bnr1">
               <a href="#">
                 <img
-                  src="./images/bnr 1.jpg"
+                  src="/images/bnr 1.jpg"
                   alt="WELCOME GIFT 처음이니까 더 특별한 혜택 스페셜 20% 쿠폰 + 첫 구매 5천"
                 />
               </a>
@@ -167,15 +165,14 @@
       </main>
       <footer class="footer">
         <div class="logo-foot">
-          <a href="#">로고 풋터용</a>
+          <a href="#"><img src="./images/logo-foot.png" alt="Just쇼핑몰" /></a>
         </div>
         <div class="copyright">&#169;copyright</div>
         <div class="sns">
-          <ul>
+          <ul class="lst-sns">
             <li><a href="#">facebook</a></li>
             <li><a href="#">instagram</a></li>
             <li><a href="#">youtube</a></li>
-            <li><a href="#">blog</a></li>
           </ul>
         </div>
       </footer>
