--- a/05-craftsmanWebDesign/01-just쇼핑몰/index.html
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/index.html
@@ -178,11 +178,16 @@
       </footer>
     </div>
     <!-- modal -->
-    <div id="modal" class="dimmed">
+    <div id="modal" class="modal-dimmed">
       <div class="modal-box">
         <h3>모달창 제목</h3>
-        <p>모달창 내용</p>
-        <button>닫기</button>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus, temporibus id. A debitis blanditiis odio culpa
+          tempore. Exercitationem id ducimus consequuntur ratione nostrum
+          possimus reiciendis corporis nobis? Modi, quasi delectus.
+        </p>
+        <button>X</button>
       </div>
     </div>
   </body>
