--- a/05-craftsmanWebDesign/01-just쇼핑몰/index.html
+++ b/05-craftsmanWebDesign/01-just쇼핑몰/index.html
@@ -58,31 +58,33 @@
         </nav>
       </header>
       <main class="main">
-        <div class="slide">
-          <div class="slide1">
-            <a href="#">
-              <img
-                src="./images/slide 1.jpg"
-                alt="Lamerei 여름 햇살 아래 여유로운 나만의 바캉스 라메레이 ~46% + 최대 3만원 페이백 이벤트"
-              />
-            </a>
-          </div>
-          <div class="slide2">
-            <a href="#">
-              <img
-                src="./images/slide 2.jpg"
-                alt="a.t. corner 엣코너와 함께한 설레는 여름 이야기 10% 쿠폰 + 30% 페이백까지"
-              />
-            </a>
-          </div>
-          <div class="slide3">
-            <a href="#">
-              <img
-                src="./images/slide 3.jpg"
-                alt="depound 싱그럽고 청량한 드파운드만의 컬렉션 최대 50% 할인 + 스타벅스 쿠폰"
-              />
-            </a>
-          </div>
+        <!-- 조부모 -->
+        <div class="slide-wrap">
+          <!-- 부모 -->
+          <ul class="lst-slide">
+            <!-- 자식 -->
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/slide 1.jpg"
+                  alt="Lamerei 여름 햇살 아래 여유로운 나만의 바캉스 라메레이 ~46% + 최대 3만원 페이백 이벤트"
+              /></a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/slide 2.jpg"
+                  alt="a.t. corner 엣코너와 함께한 설레는 여름 이야기 10% 쿠폰 + 30% 페이백까지"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./images/slide 3.jpg"
+                  alt="depound 싱그럽고 청량한 드파운드만의 컬렉션 최대 50% 할인 + 스타벅스 쿠폰"
+              /></a>
+            </li>
+          </ul>
         </div>
         <div class="contents">
           <!-- 공지사항 tab -->
