230705 float, clear, clearfix, position 가운데 정렬

--- a/04-css/05-float.html
+++ b/04-css/05-float.html
@@ -10,10 +10,10 @@
     <h1>float</h1>
 
     <div class="wrap">
-      <header>
+      <header class="clearfix">
         <h1>logo</h1>
         <nav>
-          <ul>
+          <ul class="clearfix">
             <li>menu1</li>
             <li>menu2</li>
             <li>menu3</li>
@@ -32,5 +32,31 @@
         <div class="foot3">sns</div>
       </footer>
     </div>
+
+    <h2>clear</h2>
+    <ul class="container">
+      <li>list1</li>
+      <li>list2</li>
+      <li>list3</li>
+      <li>list4</li>
+      <li>list5</li>
+      <li>list6</li>
+    </ul>
+
+    <style>
+      .container li {
+        float: left;
+        width: 100px;
+        height: 100px;
+        border: 1px solid #000;
+        background: #cce5fa;
+      }
+      .container li:nth-child(3) {
+        clear: left;
+      }
+      .container li:nth-child(5) {
+        clear: left;
+      }
+    </style>
   </body>
 </html>
