--- a/04-css/06-responsive.html
+++ b/04-css/06-responsive.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive | css</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
         margin: 0;
@@ -13,6 +17,8 @@
         text-decoration: none;
         color: #000;
         line-height: 1.5;
+        /* 기본 폰트 */
+        font-family: "Noto Sans KR", sans-serif;
       }
     </style>
   </head>
@@ -93,6 +99,10 @@
           display: flex;
           justify-content: space-between;
           height: 100px;
+        }
+        header h1 {
+          font-family: "Roboto", sans-serif;
+          /* header h1 logo만 폰트 roboto 적용 */
         }
         .container {
           display: flex;
