--- a/04-css/02-font.html
+++ b/04-css/02-font.html
@@ -146,6 +146,65 @@
         font-size: 30px;
       }
     </style>
+
+    <h2>shadow</h2>
+    <div class="box1">으악장마다비온다집가고시푸다</div>
+    <style>
+      .box1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 300px;
+        margin: 50px auto;
+        background-color: #999;
+        color: #fff;
+        font-size: 40px;
+        font-weight: bold;
+        text-shadow: 0 0 10px #000;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+      }
+    </style>
+
+    <h2>text-overflow (말줄임)</h2>
+    <ul class="lst-bbs">
+      <li>
+        <a href="#"
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit.</a
+        >
+      </li>
+    </ul>
+
+    <style>
+      .lst-bbs a {
+        overflow: hidden;
+        display: block;
+        width: 300px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        background: #ceffd9;
+      }
+    </style>
     <br />
     <br />
     <br />
